@@ -869,3 +869,5 @@ time_t get_stat_update_interval()
   }
 
 void empty_received_nodes() {}
+
+void start_request_pool(threadpool_t *tp) {}
